--- a/index.html
+++ b/index.html
@@ -11,18 +11,25 @@
 	<script type="text/javascript" src="bootstrap.min.js"></script>
 </head>
 <body>
-	<button onclick="return false" id="btn" class="btn btn-primary">Walla</button>
-	<div id="load">
-		
+	<div id="wrapper">
+		<button onclick="return false" id="btn" class="btn btn-warning">Update!</button>
+		<div id="load">
+			
+		</div>
 	</div>
-
 	<script type="text/javascript">
 		$(document).ready(function(){
+			loadData();
 			$('#btn').click(function(){
-				$('#load').html("");
-				$('#load').load('http://www.schillerskaselevkar.se/data.php');
+				loadData();
 			});
 		});
+
+
+		var loadData = function(){
+			$('#load').html("");
+			$('#load').load('http://www.schillerskaselevkar.se/data.php');
+		}
 	</script>
 </body>
 </html>
