--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 		var loadData = function(){
 			$('#load').html("");
-			$('#load').load('http://www.schillerskaselevkar.se/data.php');
+			$('#load').load('http://cygate.neq3.com/data.php #content');
 		}
 	</script>
 </body>
