late sync, no idea what i did except removing files

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 	<div id="wrapper">
 		<button onclick="return false" id="btn" class="btn btn-warning">Update!</button>
 		<div id="load">
-			
+
+		</div>
+	</div>
+	<hr>
+	<div id="footer">
+		<div class="center">
+			Made by: Zebrafeed Studio
 		</div>
 	</div>
 	<script type="text/javascript">
@@ -26,7 +32,7 @@
 		});
 
 		var loadData = function(){
-			$('#load').html("");
+			$('#load').html("Laddar resultat...");
 			$('#load').load('http://cygate.neq3.com/data.php #content');
 		}
 	</script>
