--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</div>
 	<hr>
 	<div id="footer">
-		<div class="center">
+		<div id="footertext" class="center">
 			Made by: Zebrafeed Studio
 		</div>
 	</div>
